# SWO-22L-LAB-4

./: .clang-format  .gitignore  CMakeLists.txt  ExpectedTestOutput.txt  README.md  WhiteBear.cc  WhiteBear.h  WhiteBearUnitTests.cc  mccabe-report.txt
src/: CheeseItem.h  ConcertTicketItem.h  IItem.h  LegolasItem.h  NormalItem.h  WhiteBear.cc  WhiteBear.h  WhiteBearMain.cc
tests/: WhiteBearCharacterizationTests.cc  WhiteBearUnitTests.cc
